# shared_spendings

./: .gitignore  Cargo.toml
android/sharedSpendings/: settings.gradle.kts
android/sharedSpendings/app/: build.gradle.kts
android/sharedSpendings/app/src/main/: AndroidManifest.xml
android/sharedSpendings/app/src/main/res/drawable/: baseline_add_circle_outline_24.xml  baseline_android_24.xml  baseline_autorenew_24.xml  baseline_calendar_month_24.xml  baseline_check_circle_outline_24.xml  baseline_close_24.xml
android/sharedSpendings/app/src/main/res/layout/: activity_first_screen.xml  activity_user_main_screen.xml  fragment_add_record.xml  (+2 more)
android/sharedSpendings/gradle/: libs.versions.toml
android/sharedSpendings/gradle/wrapper/: gradle-wrapper.properties
db/: init.sql
rust/: Cargo.toml  diesel.toml  docker-compose.yml
rust/db/: Dockerfile  init.sql
rust/migrations/2025-02-02-212217_record/: down.sql  up.sql
rust/migrations/2025-02-03-110656_username/: down.sql  up.sql
rust/migrations/2025-02-03-115505_record/: down.sql  up.sql
rust/src/: controller.rs  database_connection.rs  lib.rs  main.rs  model.rs  record.rs  schema.rs  user.rs
rust/src/controller/: records.rs  users.rs
rust/src/controller/records/: add.rs  edit.rs  get.rs  remove.rs
rust/src/controller/users/: add.rs  edit.rs  get.rs  remove.rs
rust/src/model/: schema.rs
rust/src/model/record/: dao.rs  record.rs
rust/src/model/user/: dao.rs  user.rs
rust/src/record/: dao.rs  record.rs
rust/src/user/: dao.rs  user.rs
src/: lib.rs  main.rs
src/record/: record.rs
(+18 files in other folders)
