[package]
name = "shared_spendings"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.9.0"}
chrono = { version = "0.4.39", features = ["serde"] }
diesel = { version = "2.2.7", features = ["chrono", "postgres"] } 
dotenvy = "0.15.7"
futures = "0.3.31"
serde = {version = "1.0.217", features = ["derive"]}
serde_json = "1.0.138"
